--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@supabase/supabase-js": "^2.86.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^4.0.13",
